# LPJmLFIT_Emulator

./: .dvcignore  .gitattributes  .gitignore  00_START_HERE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  DESIGN.md  DESIGN_CHECKPOINT_PROMPT.md  DEVELOPMENT_PLAN.md  ECOSYSTEM_AND_COUPLING.md  ENGINEERING_STANDARDS.md  HANDOFF_NEXT_SESSION.md  JOURNAL.md  MEMORY.md  NEXT_SESSION_PROMPT.md  PROJECT_REVIEW_2026-07-22.md  Project.toml  README.md  RESEARCH_SURVEY.md  SOURCE_FINDINGS.md  STEERING_PROMPT.md
.claude/: settings.json
.claude/hooks/: session-skill-inventory.sh  skill-capture-gate.sh  skill-usage-log.sh  slurm-guard.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: CI.yml  TagBot.yml  docs.yml  format.yml  python.yml
artifacts/metrics/: p3b_water_closure_boreal_c45000_45999.json  p3b_water_closure_global_c0_67419.json  phase2_slow_emulator_oodwarm_6000.json  phase2_slow_emulator_random_6000.json  phase3_fdiff_cbinary_validation.json
config/: environment.yml  hpc_slurm.yaml  paths.yaml
data/: README.md
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/diagrams/: index.html
dev/tutorials/: index.html
docs/: Project.toml  make.jl  p1_s_in_loop_design.md  phase1_p3b_water_closure.md  phase2_slow_emulator.md  phase3_fdiff_cbinary_validation.md  phase3_fdiff_spike.md  sapwood_bg_design.md  slow_flux_conditioning_data_spec.md  water_supply_perpft_design.md
docs/archive/: HANDOFF_NEXT_SESSION_2026-07-22_archived.md  MEMORY_2026-07-22_pre-consolidation.md
docs/decisions/: 0000-template.md  0001-phased-hybrid.md  0002-emulate-distributions.md  0003-flux-then-integrate-carbon.md  0004-constant-co2-regime.md  0005-drf-baseline-escalation.md  0006-reuse-terrarium-seb.md  0007-julia-primary-stack.md  0008-documentation-only.md  0009-ssh-deploy-key-auth.md  0010-s-prototype-biome-stratified.md  0011-reuse-global-ground-truth.md  0012-canonical-slow-emulator-here.md  0013-main-only-workflow.md  0014-differentiable-fast-core-first.md  0015-reuse-map.md  0016-nn-hook-training.md  0017-self-contained-energy-closure.md  0018-growth-ownership-split.md  0019-component-s-port-inference-not-call.md  0020-component-s-flux-driven.md  0021-component-s-native-julia.md  0022-component-s-handrolled-drf.md  0023-component-s-production-drf-runtime-consistency.md  0024-component-s-dynamic-membership-and-true-age.md  README.md
docs/src/: diagrams.md  index.md  refs.bib
ext/: FDiffTrainingExt.jl
patches/: json_object_iterator.h.shim  lpjmlfit_daily_grass_gpp.patch
previews/PR11/: .documenter-siteinfo.json  index.html
previews/PR12/: .documenter-siteinfo.json  index.html
previews/PR13/: .documenter-siteinfo.json  index.html
previews/PR14/: .documenter-siteinfo.json  index.html
previews/PR6/: .documenter-siteinfo.json
previews/PR8/: .documenter-siteinfo.json  index.html  refs.bib  search_index.js
previews/PR9/: .documenter-siteinfo.json
python/: README.md  conftest.py  pyproject.toml
python/config/: config.yaml
python/src/lpjmlfit_emulator/: __init__.py  baseline.py  data.py  drivers.py  features.py  metrics.py  noise_floor.py  train.py  transforms.py
python/src/lpjmlfit_emulator/reference/: debias_presentday.json
python/tests/: test_data.py  test_features.py  test_metrics.py  test_noise_floor.py  test_transforms.py
scripts/: README.md  bench_slow_speedup.jl  build_laistand_lai_feature.py  build_slow_count_table.py  build_slow_flux_table.py  build_slow_oracle_reference.py  build_slow_runtime_table.py  build_swc_soilmoist_feature.py  compare_grass_daily_c_vs_fdiff.py  export_count_matrices.py  extract_biome_forcing.py  extract_fdiff_cell_multiyear.py  extract_fdiff_decadal.py  extract_fdiff_grass_daily.py  extract_fdiff_individuals.py  extract_fdiff_individuals_multiyear.py  extract_fdiff_validation_inputs.py  extract_grass_structure_decadal.py  flux_ood_experiment.jl  gen_diagrams.jl  grass_carbonbalance_probe.jl  grass_cocalibration_probe.jl  grass_cover_mechanism_diagnosis.jl  grass_daily_curve_fdiff.jl  grass_default_flip_probe.jl  grass_drought_amplitude_probe.jl  grass_drought_rooting_probe.jl  grass_drought_soilmemory_probe.jl  grass_fapar_faithfulness_check.jl  grass_gsi_warmstart_probe.jl  grass_lightbalance_probe.jl  grass_lightconductance_decomp.jl  grass_npp_level_probe.jl  grass_npp_light_response_probe.jl  grass_overshoot_diagnosis.jl  grass_phen_probe.jl  regen_fdiff_baselines.jl  run_coupled_biomes.jl  run_coupled_cell.jl  run_daily_subset.sh  (+18 more)
src/: LPJmLFITEmulator.jl  allometry.jl  conservation.jl  drf.jl  fdiff.jl  fdiff_smoothops.jl  interface.jl  registry.jl  run.jl  state.jl
src/components/: energy.jl  fast.jl  slow.jl
test/: Project.toml  aqua_tests.jl  jet_tests.jl  runtests.jl
test/testitems/: allometry_tests.jl  biome_coupled_tests.jl  carbon_ledger_tests.jl  cbinary_validation_tests.jl  conservation_closure_tests.jl  coupled_run_tests.jl  coupling_tests.jl  data_validation_tests.jl  decadal_validation_tests.jl  (+30 more)
(+143 files in other folders)
