[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lpjmlfit-emulator-proto"
version = "0.1.0"
description = "Prototype of the LPJmL-FIT slow distributional trait/size emulator (component S)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "Jamir Priesner" }]
keywords = ["lpjml-fit", "land-emulator", "distributional-emulation", "esm"]

# Runtime dependencies mirror the reused conda env /home/jamirp/.conda/envs/py311_new
# (Python 3.11.9). Lower bounds track the versions resolved in that env; the exact
# pins live in the uv lockfile (uv.lock) for reproducible CI (Engineering Standards §7).
# NOTE: torch/lightning/sdv/statsmodels/POT etc. from environment.yml are intentionally
# omitted from the prototype's core deps (baseline S = LightGBM + Gaussian copula, no NN)
# and are added only if the metric panel escalates beyond the baseline.
dependencies = [
    "numpy>=2.2",
    "scipy>=1.14",
    "pandas>=2.2",
    "polars>=1.33",
    "pyarrow>=16",
    "scikit-learn>=1.5",
    "lightgbm>=4.6",
    "xgboost>=3.2",
    "copulas>=0.14",
    "xarray>=2024.0",
    "netcdf4>=1.6",
    "matplotlib>=3.9",
]

[project.urls]
Homepage = "https://github.com/"  # owner's private repo (set at first push, see ENGINEERING_STANDARDS.md §1)

# PEP 735 dependency groups (dev/test/lint only — never shipped).
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.156.6",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lpjmlfit_emulator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# src/ layout: make the package importable without an editable install, so
# `python -m pytest python/tests -q` works against the reused env directly.
pythonpath = ["src"]

# Hypothesis has no native [tool.hypothesis] table; its settings profiles are
# registered in conftest.py (profile "ci": derandomize=True, deadline=None) so
# property-based runs are deterministic (fixed-seed discipline, seed 42).
